--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^4.0.0",
     "aos": "^3.0.0-beta.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
