--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/viewer": "^1.9.56",
     "aos": "^3.0.0-beta.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
